--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     цифры числа. Соотношение цифр задается пользователем. Если таких
     элементов нет, то выдать сообщение об этом
     <br>
-    <button><</button>
-    <button>></button>
-      <input type="number" id="numInput">
+    <button id="<"><</button>
+    <button id=">">></button>
+    <input type="number" id="numInput">
     <br>
-    Признак сравнения: <span><</span>
+    Признак сравнения: <span id="param"><</span>
     <br>
     Введите <span id="counter">10</span> 4-х значных чисел
     <div id="sourceArr">Исходный массив:</div>
-    <div id="processedArr">Обработанный массив:</div>
+    <div id="processedArr">Результат: </div>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
