--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
