--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <br>
 <button id="<">&#60;</button>
 <button id=">">&#62;</button>
+<label for="numInput">Введите число</label>
 <input type="number" id="numInput">
 <br>
 Признак сравнения: <span id="param"><</span>
